# mifith

./: Makefile  config.cache  config.status  configure  configure.in  conio4linux.h  dellf  dellf.c  gomi  mifith  mifith.C  mifith.C,v  mifith.bk.C
mifith-0.9/: Makefile.am  Makefile.in  conio4linux.h  mifith.C
