dnl Process this file with autoconf to produce a configure script.
AC_INIT(mifith.C)


dnl Setup for automake
AM_INIT_AUTOMAKE(mifith,0.9)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.
AC_CHECK_LIB(curses, main)


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(curses.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
